--- a/package.json
+++ b/package.json
@@ -34,11 +34,13 @@
   },
   "homepage": "https://github.com/topological-ragnar/pitch-lattice",
   "dependencies": {
+    "jquery": "^2.2.3",
+    "midi-node": "^0.1.13",
+    "promise": "^7.1.1",
     "raf-loop": "^1.1.3",
     "three": "^0.76.1",
     "three-orbit-controls": "^72.0.0",
-    "three-window-resize": "^1.0.4",
-    "jquery": "^2.2.3"
+    "three-window-resize": "^1.0.4"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.6.0",
